*add checkStyle
*add spotbugs